slurm_outputs/tng_mrg/merger_file_creation_2798937.err

EnvironmentNameNotFound: Could not find conda environment: holo310
You can list all discoverable environments with `conda info --envs`.


  File "<fstring>", line 1
    (simName=)
            ^
SyntaxError: invalid syntax
